--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-error-boundary": "^4.0.11",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
